--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,9 @@
     <title>{% block title %}Projekt Tomo{% endblock %}</title>
     <link rel='stylesheet' href='{{ MEDIA_URL }}style.css' type='text/css'>
     <link rel='stylesheet' href="{{ MEDIA_URL }}codemirror/contrib/python/css/pythoncolors.css" type="text/css" >
+    <script type="text/javascript"
+       src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
     <script src="{{ MEDIA_URL }}codemirror/js/highlight.js" type="text/javascript"></script>
     <script src="{{ MEDIA_URL }}codemirror/js/stringstream.js" type="text/javascript"></script>
     <script src="{{ MEDIA_URL }}codemirror/js/tokenize.js" type="text/javascript"></script>
