--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <title>{% block title %}Projekt Tomo{% endblock %}</title>
     <link rel='stylesheet' href='{{ MEDIA_URL }}style.css' type='text/css'>
-    <link rel='stylesheet' href="{{ MEDIA_URL }}codemirror/contrib/python/css/pythoncolors.css" type="text/css" >
+    <link rel="stylesheet" href="http://yandex.st/highlightjs/6.0/styles/default.min.css">
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
         tex2jax: {
@@ -16,11 +16,13 @@
     <script type="text/javascript"
        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
-    <script src="{{ MEDIA_URL }}codemirror/js/highlight.js" type="text/javascript"></script>
-    <script src="{{ MEDIA_URL }}codemirror/js/stringstream.js" type="text/javascript"></script>
-    <script src="{{ MEDIA_URL }}codemirror/js/tokenize.js" type="text/javascript"></script>
-    <script src="{{ MEDIA_URL }}codemirror/contrib/python/js/parsepython.js" type="text/javascript"></script>
-    <script type='text/javascript' src='{{ MEDIA_URL }}highlight.js'></script>
+    <script src="http://yandex.st/highlightjs/6.0/highlight.min.js"></script>
+    <script>
+    $(document).ready(function() {
+        $('code').each(function(i, e) {hljs.highlightBlock(e, '    ')});
+    });
+    </script>
+<script>hljs.initHighlightingOnLoad();</script>
 </head>
 
 <body>
