Made solutions prefetch parts.

--- a/templates/solutions.html
+++ b/templates/solutions.html
@@ -24,14 +24,14 @@
     <table>
       <tr>
         <th></th>
-      {% for part in problem.parts.all %}
+      {% for part in parts %}
         <th>{{ forloop.counter }}</th>
       {% endfor %}
      </tr>
       {% for user, solution in solutions.items %}
       <tr>
         <th>{{ user.get_full_name }}</th>
-          {% for part in problem.parts.all %}{% with solution|get:part as sol %}
+          {% for part in parts %}{% with solution|get:part as sol %}
           <td>
           {% if sol %}
              <span title="{{ sol.solution }}">{% if sol.correct %}+{% else %}?{% endif %}</span>
