--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 <div id='header'>
     <nav>
         <ol id='breadcrumbs'>{% block breadcrumbs %}
-            <li><a href='{% url problem_list %}'>
+            <li><a href='{% url collection_list %}'>
                 Začetna stran
             </a></li>
         {% endblock %}</ol>
