--- a/templates/collections.html
+++ b/templates/collections.html
@@ -2,17 +2,17 @@
 {% load my_tags %}
 
 {% block content %}
-    {% for problem in problem_list %}
+    {% for collection in collections %}
     <div class='problem'>
         <h2>
-            <a href='{% url show_problem problem.id %}'>
-                {{ problem.name }}
+            <a href='{% url show_problem collection.id %}'>
+                {{ collection.name }}
             </a>
             {% if request.user.is_staff %}
-            ({{ problem.get_status_display }})
+            ({{ collection.get_status_display }})
             {% endif %}
         </h2>
-        {{ problem.description|pymarkdown|safe }}
+        {{ collection.description|pymarkdown|safe }}
     </div>
     {% endfor %}
 {% endblock %}
