Changed problem view to collection view.

--- a/templates/404.html
+++ b/templates/404.html
@@ -11,7 +11,7 @@
         Vpisali ste naslov strani, ki ne obstaja. Poglejte, če ste naslov
         vpisali pravilno.
     </p>
-    <a class='button default' href='{% url problem_list %}'>
+    <a class='button default' href='{% url collection_list %}'>
         Nazaj na začetek
     </a>
 {% endblock %}
