--- a/templates/collections.html
+++ b/templates/collections.html
@@ -5,7 +5,7 @@
     {% for collection in collections %}
     <div class='problem'>
         <h2>
-            <a href='{% url show_problem collection.id %}'>
+            <a href='{% url show_collection collection.id %}'>
                 {{ collection.name }}
             </a>
             {% if request.user.is_staff %}
