--- a/templates/solutions.html
+++ b/templates/solutions.html
@@ -5,7 +5,7 @@
 {% block title %}Projekt Tomo &mdash; {{ problem.name }}{% endblock %}
 
 {% block breadcrumbs %}
-<li><a href='{% url problem_list %}'>
+<li><a href='{% url collection_list %}'>
     Začetna stran
 </a></li>
 <li>&#187;<a href='{% url show_problem problem.id %}'>
