Replaced problem_download with collection_download

--- a/templates/collection.html
+++ b/templates/collection.html
@@ -60,7 +60,7 @@
             dobite obvestila o pravilno in napačno rešenih nalogah.
         </p>
         <div class='buttons'>
-            <a class='button default' href='{% url download_problem collection.id %}'>
+            <a class='button default' href='{% url download_collection collection.id %}'>
                 Shranite vzorčno datoteko
             </a>
         </div>
