Finished the migration of the Problem model.

--- a/templates/collection.html
+++ b/templates/collection.html
@@ -42,7 +42,7 @@
             {% endwith %}
             </div>
         {% endif %}
-        {% if problem.status == '40' %}
+        {% if collection.status == '40' %}
             <div class='solution'>
             <h3>Uradna rešitev:</h3>
             <pre><code>{{ part.solution }}</code></pre>
