--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
-<html lang='si'>
-
-<head>
-    <meta charset='utf-8'>
+<html lang="si">
+  <head>
+    <meta charset="utf-8">
     <title>{% block title %}Projekt Tomo{% endblock %}</title>
-    <link rel='stylesheet' href='{{ MEDIA_URL }}style.css' type='text/css'>
-    <link rel="stylesheet" href="http://yandex.st/highlightjs/6.0/styles/default.min.css">
+    <meta name="description" content="">
+    <meta name="author" content="Matija Pretnar">
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Le styles -->
+    <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap.css">
+    <style type="text/css">
+      /* Override some defaults */
+      html, body {
+        background-color: #eee;
+      }
+      body {
+        padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
+      }
+      .container > footer p {
+        text-align: center; /* center align it with the container */
+      }
+      .container {
+        width: 820px; /* downsize our container to make the content feel a bit tighter and more cohesive. NOTE: this removes two full columns from the grid, meaning you only go to 14 columns and not 16. */
+      }
+
+      /* The white background content wrapper */
+      .content {
+        background-color: #fff;
+        padding: 20px;
+        margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
+        -webkit-border-radius: 0 0 6px 6px;
+           -moz-border-radius: 0 0 6px 6px;
+                border-radius: 0 0 6px 6px;
+        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+                box-shadow: 0 1px 2px rgba(0,0,0,.15);
+      }
+
+      /* Page header tweaks */
+      .page-header {
+        background-color: #f5f5f5;
+        padding: 20px 20px 10px;
+        margin: -20px -20px 20px;
+      }
+
+      .topbar .btn {
+        border: 0;
+      }
+
+    </style>
+
+    <!-- Le fav and touch icons -->
+    <!-- <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png"> -->
+    <link rel="stylesheet" href="http://yandex.st/highlightjs/6.1/styles/default.min.css">
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
         tex2jax: {
@@ -13,46 +67,76 @@
         }
       });
     </script>
-    <script type="text/javascript"
-       src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script src="{{ STATIC_URL }}jquery.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}bootstrap-dropdown.js">
     </script>
-    <script src="http://yandex.st/highlightjs/6.0/highlight.min.js"></script>
+    <script type="text/javascript" src="http://yandex.st/highlightjs/6.0/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-</head>
+  </head>
 
-<body>
-<div id='header'>
-    <nav>
-        <ol id='breadcrumbs'>{% block breadcrumbs %}
-            <li><a href='{% url collection_list %}'>
-                Začetna stran
-            </a></li>
-        {% endblock %}</ol>
-        <ul id='account'>
-        {% if user.is_authenticated %}
-            <li>
-                {{ user.get_full_name }}
-                <a class='button' href='{% url logout %}?next={{ request.path }}'>Odjavite se</a>
-            </li>
-        {% else %}
-            <li><a href='{% url login %}?next={{ request.path }}'>
-                Prijavite se
-            </a></li>
-        {% endif %}
-        </ul>
-    </nav>
-</div>
-        
-<div id='content'>
-{% block content %}
-<div id='description'>{% block description %}{% endblock %}</div>
-<div id='action'>{% block action %}{% endblock %}</div>
-{% endblock %}
-</div>
+  <body>
 
-<div id='footer'>
-   &copy; 2011 Matija Pretnar
-</div>
-</body>
+    <div class="topbar">
+      <div class="fill">
+        <div class="container">
+          <a class="brand" href="#">Projekt Tomo</a>
+          <!--
+          <ul class="nav">
+            <li class="active"><a href="#">Naloge</a></li>
+            <li><a href="#settings">Nastavitve</a></li>
+            <li><a href="#help">Pomoč</a></li>
+          </ul>
+          -->
+          {% if user.is_authenticated %}
+              <form method='get' action="{% url django.contrib.auth.views.logout %}" class="pull-right">
+                Prijavljeni ste kot <a>{{ user.get_full_name }}</a>
+                <button class="btn" type="submit">Odjavite se</button>
+              </form>
+          {% else %}
+            <form method='post' action="{% url django.contrib.auth.views.login %}" class="pull-right">
+              {% csrf_token %}
+              <input class="input-small" id="id_username" name="username" type="text" placeholder="novakj">
+              <input class="input-small" id="id_password" name="password" type="password" placeholder="Triglav.1">
+              <input type='hidden' name='next' value='{{ next|default:request.path }}' >
+              <button class="btn" type="submit">Prijavite se</button>
+            </form>
+          {% endif %}
+        </div>
+      </div>
+    </div>
 
+    <div class="container">
+
+      <div class="content">
+        <div class="page-header">
+          <h1>
+            {% block header %}
+            {% endblock %}
+            <small>
+              {% block subheader %}
+              {% endblock %}
+            </small>
+          </h1>
+        </div>
+        <div class="row">
+          <div class="span14">
+            {% block content %}
+            {% endblock %}
+          </div>
+        </div>
+      </div>
+
+      <footer>
+        <p>Powered by
+          <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>,
+          <a href="http://www.mathjax.org/">MathJax</a> and
+          <a href="http://softwaremaniacs.org/soft/highlight/en/">highlight.js</a>
+        <p>
+        <p>&copy; Matija Pretnar 2011</p>
+      </footer>
+
+    </div> <!-- /container -->
+
+  </body>
 </html>
