Added styles for hidden problem sets.

--- a/templates/inline/base.html
+++ b/templates/inline/base.html
@@ -1,4 +1,4 @@
-<div class='row inline'>
+<div class='row inline {% block style %}{% endblock %}'>
     <div class="span1">
         <div class="stats {% block stats-class %}{% endblock %}">
         <div class="stats-contents">
