--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,7 @@
 
       .inline {
         margin-bottom: 10px;
+
       }
 
       .stats {
@@ -115,6 +116,23 @@
         text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
         background-color: #f0f0f0;
         border-color: #ddd;
+      }
+      .hidn {
+        background-color: #f0f0f0;
+        margin-left: -10px;
+        padding: 5px 0px;
+      }
+      .hidn .stats {
+        margin-left: -10px;
+        margin-right: -10px;
+        left: 0px;
+      }
+      .hidn .span12 {
+        margin-left: 10px;
+      }
+      .hidn .stats {
+        background-color: #ddd;
+        color: #404040;
       }
     </style>
 
