--- a/templates/base.html
+++ b/templates/base.html
@@ -224,9 +224,9 @@
       </div>
 
       <footer>
-        <p>Powered by
+        <p>Tomo ponosno uporablja
           <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>,
-          <a href="http://www.mathjax.org/">MathJax</a> and
+          <a href="http://www.mathjax.org/">MathJax</a> in
           <a href="http://softwaremaniacs.org/soft/highlight/en/">highlight.js</a>
         <p>
         <p>&copy; Matija Pretnar 2011</p>
