--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
       {% endif %}
     {% endfor %}
 
-    <h3><a href='{% url course course.id %}'>Vse naloge…</a></h3>
+    <h3><a href='{% url course course.id %}'>Vsi sklopi…</a></h3>
 
     {% if not forloop.last %}<hr />{% endif %}
   {% endfor %}
