--- a/templates/inline/base.html
+++ b/templates/inline/base.html
@@ -10,5 +10,7 @@
     <div class='span12'>
         <h3>{% block title %}{% endblock %}</h3>
         <div class='my-actions'>{% block actions %}{% endblock %}</div>
+        {% block contents %}{% endblock %}
     </div>
+
 </div>
