--- a/templates/problem_set.html
+++ b/templates/problem_set.html
@@ -61,49 +61,11 @@
         <div class='row'>
           <div class='span12 offset1'>
             {{ problem.description|markdown }}
-
-            {% for part in problem.parts.all %}
-              {% with attempts|get:part.id as attempt %}
-              <div class='alert-message block-message {% if attempt.correct %}success{% else %}{% if attempt.solution %}error{% else %}default{% endif %}{% endif %}'>
-                {{ part.description|markdown }}
-
-                <div id="solutions-{{ problem.id }}-{{ part.id }}" class="modal hide fade" style="width: 700px; margin: -250px 0 0 -352px;
-">
-                  <div class="modal-header">
-                    <a href="#" class="close">&times;</a>
-                    <h3>Naloga {{ forloop.parentloop.counter }}.{{ forloop.counter }})</h3>
-                  </div>
-                  <div class="modal-body">
-                    <h4>Vaša rešitev</h4>
-                    {% if attempt.solution %}
-                    <pre><code>{{ attempt.solution }}</code></pre>
-                    {% else %}
-                    <p>Naloge še niste reševali.</p>
-                    {% endif %}
-                    <h4>Uradna rešitev</h4>
-                    {% if problem_set.solution_visibility == 'vidne' %}
-                      <pre><code>{{ part.solution }}</code></pre>
-                    {% endif %}
-                    {% if problem_set.solution_visibility == 'pogojno' and attempt.correct %}
-                      <pre><code>{{ part.solution }}</code></pre>
-                    {% endif %}
-                    {% if problem_set.solution_visibility == 'pogojno' and not attempt.correct %}
-                      <p>Uradno rešitev boste lahko videli šele takrat, ko boste nalogo pravilno rešili.</p>
-                    {% endif %}
-                    {% if problem_set.solution_visibility == 'skrite' %}
-                      <p>Uradne rešitve so skrite.</p>
-                    {% endif %}
-                  </div>
-                </div>
-                <div class='my-actions'>
-                  <a data-controls-modal="solutions-{{ problem.id }}-{{ part.id }}" data-backdrop="true" data-keyboard="true" href="#">Poglej rešitev</a>
-                </div>
-              </div>
-
-            {% endwith %}
-            {% endfor %}
           </div>
         </div>
+        {% for part in problem.parts.all %}
+            {% include 'inline/part.html' %}
+        {% endfor %}
       {% if not forloop.last %}<hr />{% endif %}
     {% endfor %}
 {% endblock %}
