--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -82,7 +82,7 @@
       <td>{{ user.get_full_name }}</td>
       {% for part in parts %}
           {% with user_attempts|get_default:part as attempt %}
-          <td>{% if attempt %}{{ attempt.correct|yesno:"+,–"}}{% else %}?{% endif %}</td>
+          <td>{% if attempt %}<a href="#" title="{{ attempt.solution }}">{{ attempt.correct|yesno:"+,–"}}</a>{% else %}?{% endif %}</td>
           {% endwith %}
       {% endfor %}
       </tr>
